# blogc-git-receiver

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  blogc-git-receiver.c  blogc-git-receiver.spec.in  configure.ac
build-aux/: travis-build.sh  travis-deploy.sh
